<resources>
    <!-- MainActivity -->
    <string name="app_name">WearableLearning</string>
    <string name="app_welcome_message">Welcome to WearableLearning!</string>
    <string name="game_pin_prompt">Enter a game PIN to get started</string>
    <string name="game_pin_hint">Game PIN</string>
    <string name="game_pin_missing_error">Please enter a game PIN.\n</string>
    <string name="game_pin_invalid_error">Invalid game PIN.\nPlease enter a valid game PIN.</string>
    <string name="join_game_button_text">Join game</string>

    <!-- LoginActivity -->
    <string name="login_message">Join game with your:</string>
    <string name="new_name_prompt">Enter your name</string>
    <string name="new_name_hint">Name</string>
    <string name="new_name_missing_error">Missing input.\nYou must enter your name.</string>
    <string name="existing_account_prompt">Enter your WearableLearning.org credentials</string>
    <string name="user_name_hint">Username</string>
    <string name="username_missing_error">Please enter a username and password.\nOr you can join a game without an account\nby entering your name.</string>
    <string name="username_taken_error">The name Username has already been taken.\n\nIf you are trying to reconnect as Username, click Reconnect. Otherwise, click Enter New Name.</string>
    <string name="try_again_text">Enter New Name</string>
    <string name="reconnect_text">Reconnect</string>
    <string name="password_hint">Password</string>
    <string name="password_missing_error">Please enter a password.</string>
    <string name="username_password_error">Incorrect username and/or password.\nPlease try again or you can join a game without an account\nby entering your name.</string>
    <string name="login_tab_name">Name</string>
    <string name="login_tab_account">Account</string>
    <string name="enter_game_button_text">Enter game</string>
    <string name="confirm_login_text">Join game as Username?</string>

    <!-- ChooseTeamActivity -->
    <string name="team_message">Team Selection</string>
    <string name="team_select">Choose a team</string>
    <string name="player_select">Choose a player</string>
    <string name="team_prompt">Team</string>
    <string name="player_prompt">Player</string>
    <string name="join_team_button_text">Join team</string>
    <string name="confirm_join_text">Join team as Team x Player y?</string>

    <!-- GameActivity -->
    <string name="question_txt">No state.</string>
    <string name="submit_btn_text">Submit</string>
    <string name="clear_btn_text">Clear</string>
    <string name="continue_btn_text">Continue</string>
    <string name="red_block_text">R</string>
    <string name="green_block_text">G</string>
    <string name="blue_block_text">B</string>
    <string name="block_text" />
    <string name="final_btn">Return to login</string>
    <string name="back_btn">Back</string>
    <string name="answer_hint">Answer</string>
    <string name="answer_invalid_error">Incorrect answer. Please try again.</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="confirm_back_text">Exiting the game?\n\nIf yes, you can come back to this screen by entering the same game pin, name, team, and player.</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <!-- Strings used for confirmation activity -->
    <string name="no_text">No</string>
    <string name="yes_text">Yes</string>
    <string name="confirm_clear_text">Are you sure you want to clear your answer?</string>
    <!-- Strings used for game name, player name, and team number -->
    <string name="game_name_txt">Game Null</string>
    <string name="player_name_txt">Player Null&#160;</string>
    <string name="team_name_txt">(Team Null)</string>
    <string name="close_btn_text">X</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="zero_seconds_text">Time Duration: 0</string>
</resources>