<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayoutState"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/purple_700"
    tools:context=".StateTextFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/padding_side"
        android:paddingTop="@dimen/padding_top"
        android:paddingRight="@dimen/padding_side"
        android:paddingBottom="@dimen/padding_top">

        <TextView
            android:id="@+id/game_name_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/game_name_txt"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/player_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player_name_txt"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/team_num_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/team_name_txt"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>