<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frameLayoutTransition"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TransitionSequenceFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/padding_side_large_btns"
            android:paddingTop="@dimen/padding_top"
            android:paddingRight="@dimen/padding_side_large_btns"
            android:paddingBottom="@dimen/padding_top">

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:id="@+id/skip_btn"
                android:layout_width="wrap_content"
                android:layout_height="82dp"
                android:layout_marginLeft="@dimen/button_half_space"
                android:layout_marginRight="@dimen/button_half_space"
                android:backgroundTint="@color/red"
                app:strokeColor="@color/lightgrey_button_border"
                app:strokeWidth="2dp"
                android:elevation="4dp"
                android:layout_weight="1"
                android:text="@string/block_text"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:id="@+id/ret_btn"
                android:layout_width="wrap_content"
                android:layout_height="82dp"
                android:layout_marginLeft="@dimen/button_half_space"
                android:layout_marginRight="@dimen/button_half_space"
                android:backgroundTint="@color/green"
                app:strokeColor="@color/lightgrey_button_border"
                app:strokeWidth="2dp"
                android:elevation="4dp"
                android:layout_weight="1"
                android:text="@string/block_text" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:id="@+id/question_blue_btn"
                android:layout_width="wrap_content"
                android:layout_height="82dp"
                android:layout_marginLeft="@dimen/button_half_space"
                android:layout_marginRight="@dimen/button_half_space"
                android:backgroundTint="@color/blue"
                app:strokeColor="@color/lightgrey_button_border"
                app:strokeWidth="2dp"
                android:elevation="4dp"
                android:layout_weight="1"
                android:text="@string/block_text" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:id="@+id/question_black_btn"
                android:layout_width="wrap_content"
                android:layout_height="82dp"
                android:layout_marginLeft="@dimen/button_half_space"
                android:layout_marginRight="@dimen/button_half_space"
                android:backgroundTint="@color/black"
                app:strokeColor="@color/lightgrey_button_border"
                app:strokeWidth="2dp"
                android:elevation="4dp"
                android:layout_weight="1"
                android:text="@string/block_text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/padding_side"
            android:paddingTop="@dimen/padding_top"
            android:paddingRight="@dimen/padding_side"
            android:paddingBottom="@dimen/padding_top">

            <Button
                android:id="@+id/question_temp_btn_left"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_marginRight="@dimen/button_half_space"
                android:layout_weight="1"
                android:backgroundTint="@android:color/transparent"
                app:icon="@drawable/ic_leftarrow_foreground"
                app:iconGravity="textStart"
                app:iconPadding="@dimen/icon_padding"
                app:iconTint="@color/lightgrey"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:rippleColor="@color/grey" />

            <HorizontalScrollView
                android:id="@+id/scrollView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingBottom="@dimen/button_half_space"></LinearLayout>
            </HorizontalScrollView>

            <Button
                android:id="@+id/question_temp_btn_right"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_marginRight="@dimen/button_half_space"
                android:layout_weight="1"
                android:backgroundTint="@android:color/transparent"
                app:icon="@drawable/ic_rightarrow_foreground"
                app:iconGravity="textStart"
                app:iconPadding="@dimen/icon_padding"
                app:iconTint="@color/lightgrey"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:rippleColor="@color/grey" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/padding_side"
            android:paddingTop="@dimen/padding_top"
            android:paddingRight="@dimen/padding_side"
            android:paddingBottom="@dimen/transition_padding_bot">

            <Button
                android:id="@+id/transition_clear_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/padding_side"
                android:layout_weight="1"
                android:text="@string/clear_btn_text" />

            <Button
                android:id="@+id/transition_submit_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/submit_btn_text" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>